# letsnote-wheelpad

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md
.github/workflows/: ci.yml
packaging/arch/: PKGBUILD  letsnote-wheelpad.install
packaging/deb/: postinst
packaging/rpm/: post.sh  preun.sh
packaging/systemd/: letsnote-wheelpad.service
packaging/udev/: 70-letsnote-wheelpad.rules
src/: config.rs  detector.rs  error.rs  evdev.rs  fsm.rs  grab.rs  lib.rs  main.rs  uinput.rs
tests/: algorithm_synthetic.rs  fsm_synthetic.rs
