[package]
name = "letsnote-wheelpad"
version = "0.1.0+wanwanyi.1"
edition = "2021"
rust-version = "1.85"
description = "Userland daemon that ports Panasonic Let's Note WheelPad (circular touchpad scroll) to Linux"
license = "MIT"
repository = "https://github.com/anotherwanwanyi/letsnote-wheelpad"
readme = "README.md"
publish = false
keywords = ["touchpad", "uinput", "letsnote", "wheelpad", "scroll"]
categories = ["hardware-support", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
evdev = "=0.12.2"
nix = { version = "0.27", features = ["ioctl", "fs", "signal", "poll"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
libc = "0.2"
regex = "1"
libsystemd = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]

[dev-dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
